[package]
name = "dec-number-sys"
version = "0.0.11"
authors = ["Dariusz Depta <dariusz.depta@engos.software>"]
description = "Rust bindings for 'The decNumber C library'"
documentation = "https://docs.rs/dec-number-sys"
repository = "https://github.com/EngosSoftware/decNumber.sys.git"
license = "MIT"
edition = "2021"

[dependencies]
libc = "0.2.126"

[build-dependencies]
cc = "1.0.73"