[package]
name = "dec-number-sys"
version = "0.0.23"
authors = ["senees <code@senees.de>"]
description = "Rust bindings for The decNumber C library by IBM Fellow Mike Cowlishaw"
documentation = "https://docs.rs/dec-number-sys"
repository = "https://github.com/senees/decNumber.sys.git"
license = "MIT"
edition = "2021"

[dependencies]
libc = "0.2.132"

[build-dependencies]
cc = "1.0.73"
